--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -8,18 +8,18 @@
     <fragment
         android:id="@+id/navigation_home"
         android:name="com.implude.niche.presentation.home.HomeFragment"
-        android:label="@string/title_home"
+        android:label="menu_home"
         tools:layout="@layout/fragment_home" />
 
     <fragment
-        android:id="@+id/navigation_dashboard"
-        android:name="com.implude.niche.presentation.dashboard.DashboardFragment"
-        android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        android:id="@+id/navigation_user"
+        android:name="com.implude.niche.presentation.user.UserFragment"
+        android:label="menu_user"
+        tools:layout="@layout/fragment_user" />
 
     <fragment
-        android:id="@+id/navigation_notifications"
-        android:name="com.implude.niche.presentation.notifications.NotificationsFragment"
-        android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_notifications" />
+        android:id="@+id/navigation_participation"
+        android:name="com.implude.niche.presentation.participation.ParticipationFragment"
+        android:label="menu_participation"
+        tools:layout="@layout/fragment_participation" />
 </navigation>
