feat: change ImageView to library CircleImageView in fragment_user.xml

--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -15,11 +15,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <ImageView
+        <de.hdodenhof.circleimageview.CircleImageView
             android:src="@drawable/ic_launcher_background"
             android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:contentDescription="@string/profile_pic" />
+            android:layout_height="60dp"/>
 
     </LinearLayout>
 
