--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -1,26 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".presentation.user.UserFragment"
-    android:paddingStart="24dp"
-    android:paddingEnd="24dp">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <LinearLayout
-        android:layout_marginTop="48dp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:orientation="horizontal"
+    <data>
+
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        tools:context=".presentation.user.UserFragment"
+        android:paddingStart="24dp"
+        android:paddingEnd="24dp">
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:src="@drawable/ic_launcher_background"
-            android:layout_width="60dp"
-            android:layout_height="60dp"/>
+        <LinearLayout
+            android:layout_marginTop="48dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-    </LinearLayout>
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:src="@drawable/ic_launcher_background"
+                android:layout_width="60dp"
+                android:layout_height="60dp" />
+
+        </LinearLayout>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
