--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -12,6 +12,6 @@
 		android:layout_height="match_parent"
 		tools:context=".presentation.home.HomeFragment">
 
-
+<!--wip-->
 	</androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
