--- a/app/src/main/res/layout/fragment_home_slide.xml
+++ b/app/src/main/res/layout/fragment_home_slide.xml
@@ -9,7 +9,7 @@
     android:paddingEnd="24dp">
 
     <ImageView
-        android:id="@+id/slidingPannelHandle"
+        android:id="@+id/sliding_pannel_handle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
@@ -19,7 +19,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/searchLayout"
+        android:id="@+id/search_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -27,14 +27,14 @@
         android:paddingStart="18dp"
         android:paddingTop="12dp"
         android:paddingBottom="12dp"
-        app:layout_constraintTop_toBottomOf="@+id/slidingPannelHandle">
+        app:layout_constraintTop_toBottomOf="@+id/sliding_pannel_handle">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/noto_sans_kr_medium"
             android:hint="상호명 / 태그 검색"
-            android:textColorHint="@color/text_hint"
+            android:textColorHint="@color/color_hint"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -55,7 +55,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/searchLayout">
+        app:layout_constraintTop_toBottomOf="@+id/search_layout">
 
         <TextView
             android:layout_width="wrap_content"
