--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,9 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="color_hint">#7B7B7B</color>
+    <color name="box_gray">#F5F5F5</color>
+    <color name="ad_contents">#626262</color>
+    <color name="color_distance">#297D89</color>
+    <color name="color_comment">#626262</color>
+    <color name="color_heart">#FF6060</color>
 </resources>
