--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,5 +13,6 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Include font padding to false -->
         <item name="android:includeFontPadding">false</item>
+        <item name="android:windowTranslucentStatus">true</item>
     </style>
 </resources>
