refactor: change icon xml file name 'ic_ad_icon.xml' to 'ic_advertisement.xml'

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -156,7 +156,7 @@
 
                     <ImageView
                         android:id="@+id/ad_icon"
-                        android:src="@drawable/ic_ad_icon"
+                        android:src="@drawable/ic_advertisement"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
