refactor: change xml file name 'ic_comment_icon.xml' to 'ic_comment.xml'

--- a/app/src/main/res/layout/row_recycler_item.xml
+++ b/app/src/main/res/layout/row_recycler_item.xml
@@ -100,7 +100,7 @@
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/ic_comment_icon" />
+                        android:src="@drawable/ic_comment" />
 
                     <TextView
                         android:id="@+id/store_comments"
