refactor: change xml file name 'ic_distance_icon.xml' to 'ic_distance.xml'

--- a/app/src/main/res/layout/row_recycler_item.xml
+++ b/app/src/main/res/layout/row_recycler_item.xml
@@ -52,7 +52,7 @@
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/ic_distance_icon" />
+                        android:src="@drawable/ic_distance" />
 
                     <TextView
                         android:id="@+id/store_distance"
