refactor: change xml file name 'ic_heart_icon.xml' to 'ic_heart.xml'

--- a/app/src/main/res/layout/row_recycler_item.xml
+++ b/app/src/main/res/layout/row_recycler_item.xml
@@ -76,7 +76,7 @@
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/ic_heart_icon" />
+                        android:src="@drawable/ic_heart" />
 
                     <TextView
                         android:id="@+id/store_hearts"
