--- a/app/src/main/res/layout/fragment_home_slide.xml
+++ b/app/src/main/res/layout/fragment_home_slide.xml
@@ -145,7 +145,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/noto_sans_kr_medium"
                 android:text="알고있는 정보를 공유하고 코인을 받을 수 있어요."
-                android:textColor="@color/ad_contents"
+                android:textColor="@color/color_gray"
                 android:textSize="14sp" />
 
         </LinearLayout>
