refactor: change binding text according to the model

--- a/app/src/main/res/layout/row_recycler_item.xml
+++ b/app/src/main/res/layout/row_recycler_item.xml
@@ -75,7 +75,7 @@
             android:layout_height="wrap_content"
             android:drawablePadding="3dp"
             android:fontFamily="@font/noto_sans_kr_medium"
-            android:text="@{place.comment}"
+            android:text="@{place.comments.size}"
             android:textColor="@color/color_gray"
             android:textSize="14sp"
             app:drawableStartCompat="@drawable/ic_comment"
