fix: make the only slide_panel_handle can be dragged (#33)
* chore: rename slidepannel to slidepanel

* feat: change drag view from slide_layout to sliding_panel_handle in fragment_home_slide

* feat: change drag view to layout contain panel handle image view

* refactor: change the name sliding to slide of in_slide_panel_handle.xml

* refactor: change the name slidepanel to slide_panel of background_slide_panel_round.xml

* refactor: change id sliding to slide

--- a/app/src/main/res/layout/fragment_home_slide.xml
+++ b/app/src/main/res/layout/fragment_home_slide.xml
@@ -4,26 +4,34 @@
     android:id="@+id/slide_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/background_slidepannel_round"
+    android:background="@drawable/background_slide_panel_round"
     android:paddingStart="24dp"
     android:paddingEnd="24dp">
 
-    <ImageView
-        android:id="@+id/sliding_pannel_handle"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+    <androidx.constraintlayout.widget.ConstraintLayout
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:src="@drawable/ic_sliding_pannel_handle" />
+        android:paddingBottom="16dp"
+        android:id="@+id/slide_panel_handle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:src="@drawable/ic_slide_panel_handle" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/search_layout"
-        app:layout_constraintTop_toBottomOf="@+id/sliding_pannel_handle"
+        app:layout_constraintTop_toBottomOf="@+id/slide_panel_handle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
         android:background="@drawable/background_search"
         android:paddingStart="18dp"
         android:paddingTop="12dp"
