fix: make the map do not move when the panel is up

--- a/app/src/main/res/layout/fragment_home_slide.xml
+++ b/app/src/main/res/layout/fragment_home_slide.xml
@@ -5,6 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/background_slide_panel_round"
+    android:clickable="true"
+    android:focusable="true"
     android:paddingStart="24dp"
     android:paddingEnd="24dp">
 
